--- a/VideoToSM/VideoToSM/TODO.txt
+++ b/VideoToSM/VideoToSM/TODO.txt
@@ -1,5 +1,6 @@
 ﻿Begin first note as 1/4th
 Look at ENoteTiming for more precise possition
+	Modulo assumed 64th beat (plus x times FPS to get middle of image) on ENoteTiming number (Blue = 8)
 Support LongNotes
 Support ReleaseNotes
 Support Mines
