--- a/VideoToSM/VideoToSM/TODO.txt
+++ b/VideoToSM/VideoToSM/TODO.txt
@@ -2,6 +2,7 @@
 
 
 FEATURES
+Offset to middle of note image for better accuracy. Especially for the middle note. Take FPS into account.
 Support LongNotes
 Support ReleaseNotes
 Support Mines
