--- a/VideoToSM/VideoToSM/TODO.txt
+++ b/VideoToSM/VideoToSM/TODO.txt
@@ -1,9 +1,5 @@
-﻿WIP
-NoteBar.Compress
-
-BUGS
+﻿BUGS
 Lit up LN detected as red shortnote
-Chart.CalcB64thOrderNumber: A 32th note can fit in a 4th note, but the game would call it a 4th note. Higher note timings will jump to slots they can't be in.
 
 FEATURES
 LN coords for other cols
@@ -39,5 +35,3 @@ Check if OutFox even supports special notes
 Add metadata to textbox on BPM input. Append chart metadata and notes on each dropped video
 
 Check if OutFox already optimizes scc notes on saving
-
-Optimize scc notes bar sizes by putting the row and bar data in classes and check for certain empty rows afterwards (post processing)
