--- a/VideoToSM/VideoToSM/TODO.txt
+++ b/VideoToSM/VideoToSM/TODO.txt
@@ -1,11 +1,11 @@
 ﻿BUGS
 Lit up LN detected as red shortnote
 	when LNOngoing, loosen the maxColor boundries. Extra check LN Center lighter than Left and Right
+Missed LN in video breaks LN
 
 FEATURES
 LN coords for other cols
 Other note timings
-Offset to middle of note image for better accuracy. Especially for the middle note. Take FPS into account.
 Support triplets
 Support ReleaseNotes
 Support Mines
